--- a/css/styles.css
+++ b/css/styles.css
@@ -348,7 +348,24 @@ a.paper-header:active, a.paper-header:visited {
 	border-right: 1px solid #DDDDDD;
 	padding: 25px 0 87px 0;
 }
-.col-label {
+div.col-label {
+	display: table;
+	height: 37px;
+	/*line-height: 37px;*/
+	width: 100px;
+	font-size: 15px;
+	color: #111111;
+	float: left;
+	clear: left;
+	margin: 0px;
+	text-align: left;
+}
+div.col-label span {
+	display: table-cell;
+	vertical-align: middle;
+	line-height: 1.2em;
+}
+/*.col-label {
 	line-height: 37px;
 	width: 100px;
 	font-size: 15px;
@@ -356,7 +373,7 @@ a.paper-header:active, a.paper-header:visited {
 	float: left;
 	clear: left;
 	margin: 0px;
-}
+}*/
 .col-select {
 	float: left;
 }
