--- a/css/styles.css
+++ b/css/styles.css
@@ -244,7 +244,7 @@ H1 {
 a.paper-header  {
 	display: block;
 	float: left;
-	color: #111;
+	color: #ffa641;
 	font-family: "museo_sans_cyrl500",sans-serif;
 	font-weight: 500;
 	position: relative;
@@ -252,7 +252,7 @@ a.paper-header  {
 	right: -12px;
 }
 a.paper-header:active, a.paper-header:visited {
-	color: #111;
+	color: #ffa641;
 }
 .paper-block {
 	border: 1px solid #DDDDDD;
