--- a/css/styles.css
+++ b/css/styles.css
@@ -1,5 +1,8 @@
 @charset "utf-8";
 /* CSS Document */
+html {
+	height: 100%;
+}
 BODY {
 	background-color: #fff;
 	text-align: center;
@@ -8,6 +11,14 @@ BODY {
 	min-width: 960px;
 	background-repeat: no-repeat;
 	background-position: center top;
+	height: 100%;
+}
+div.stretched {
+	min-height: 100%;
+	height: auto !important;
+	height: 100%;
+	margin: 0 auto -5px;
+	position: relative;
 }
 A, A:active, A:visited {
 	color: #3397DA;
@@ -276,6 +287,7 @@ span.paper-header a:active, span.paper-header a:visited {
 	font-size: 13px;
 	color: #333333;
 	clear: both;
+	max-width: 145px;
 }
 .paper-block P EM SUP {
 	font-size: 8px;
