--- a/css/styles.css
+++ b/css/styles.css
@@ -622,7 +622,7 @@ A.amount-change:hover {
 /* Basic jQuery Slider essential styles */
 
 ul.bjqs{position:relative; list-style:none;padding:0;margin:0;overflow:hidden; display:none;}
-li.bjqs-slide{position:absolute; display:none;}
+li.bjqs-slide{position:absolute; display:block;}
 ul.bjqs-controls{list-style:none;margin:0;padding:0;z-index:9999;}
 ul.bjqs-controls.v-centered li a{position:absolute;
 display: block;
